package Torrent;

message Chunk{
    required string CheckSum = 1;
    required int32 Size = 2;
};

message File{
    required string CheckSum = 1;
    required string RelativePath = 2;
    required string Filename = 3;
    required int64 Size = 4;
    repeated Chunk Chunk = 5;
};

message Torrent{
    required string TorrentId = 1;
    required int32 Type = 2;
    required int64 TotalSize = 3;
    required string CreateBy = 4;
    required string CreateTime = 5;
    required string TrackerAddress = 6;
    repeated File File = 7;
    optional string Introduction = 8;
};
